finish readme, and would be able to run on other machine for api docs only.
